--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -10,6 +10,7 @@
   <body>
     <div class="main-content">
         {{>header}}
+        <p>This site was created by Mike Criollo. It uses data from mapbox.com and weatherstack.net !</p>
       <img src="./img/MikeCriollo.jpeg" class="portrait" />
     </div>
     {{>footer}}
